fix content spacing

--- a/style.css
+++ b/style.css
@@ -60,11 +60,12 @@ header{
 
 .sectionOne{
     background-color: rgba(31, 41, 55, .98);
+    /* width: 900px; */
 
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
 
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
 }
 .awesomeContainer{
     /* background-color: #1f2937; */
